Corrected broken CSS

--- a/browser/css/main.scss
+++ b/browser/css/main.scss
@@ -1,8 +1,8 @@
 // Custom Bootstrap extensions
 .progressbar-muted {
-  background-color: 'transparent';
-  color: 'black';
-  opacity: '40%';
+  background-color: transparent;
+  color: black;
+  opacity: 40%;
 }
 
 // Custom CSS styles
